feat(desktop): desktop properties see more button working

--- a/index.html
+++ b/index.html
@@ -194,6 +194,62 @@
               <div class="back"></div>
             </div>
           </div>
+          <div
+            class="available-property secundary-property secundary-property-mb"
+          >
+            <div class="flipper">
+              <div class="front">
+                <img
+                  src="./assets/imóvel-campogrande.jpg"
+                  alt="preview-imóvel"
+                />
+                <button class="property-button">Campo Grande</button>
+              </div>
+              <div class="back"></div>
+            </div>
+          </div>
+          <div
+            class="available-property secundary-property secundary-property-mb"
+          >
+            <div class="flipper">
+              <div class="front">
+                <img
+                  src="./assets/imóvel-campogrande.jpg"
+                  alt="preview-imóvel"
+                />
+                <button class="property-button">Campo Grande</button>
+              </div>
+              <div class="back"></div>
+            </div>
+          </div>
+          <div
+            class="available-property secundary-property secundary-property-mb"
+          >
+            <div class="flipper">
+              <div class="front">
+                <img
+                  src="./assets/imóvel-campogrande.jpg"
+                  alt="preview-imóvel"
+                />
+                <button class="property-button">Campo Grande</button>
+              </div>
+              <div class="back"></div>
+            </div>
+          </div>
+          <div
+            class="available-property secundary-property secundary-property-mb"
+          >
+            <div class="flipper">
+              <div class="front">
+                <img
+                  src="./assets/imóvel-campogrande.jpg"
+                  alt="preview-imóvel"
+                />
+                <button class="property-button">Campo Grande</button>
+              </div>
+              <div class="back"></div>
+            </div>
+          </div>
         </div>
         <button class="see-more-btn" onclick="showProperties()">
           Ver Mais
