--- a/index.html
+++ b/index.html
@@ -304,18 +304,20 @@
           <h3 id="contact">Contato</h3>
           <ul>
             <li class="contact-list">
-              <a
+              <button
+                class="contact-button"
                 href="https://instagram.com/trovaoimoveis?igshid=MmU2YjMzNjRlOQ=="
-                ><img src="./assets/ig.png" alt="icone-instagram"
-              /></a>
+              >
+                <img src="./assets/ig.png" alt="icone-instagram" />Instagram
+              </button>
             </li>
             <li class="contact-list">
-              <a href="https://wa.me/5521979579537">
+              <button class="contact-button" href="https://wa.me/5521979579537">
                 <img src="./assets/wp.png" alt="icone-whatsapp" />
-              </a>
+                Whatsapp
+              </button>
             </li>
           </ul>
-          <p>(21)97957-9537</p>
         </div>
       </div>
       <div class="bottom-rights">
