fix(desktop): properties style optimization

--- a/index.html
+++ b/index.html
@@ -304,18 +304,20 @@
           <h3 id="contact">Contato</h3>
           <ul>
             <li class="contact-list">
-              <button
-                class="contact-button"
+              <a
                 href="https://instagram.com/trovaoimoveis?igshid=MmU2YjMzNjRlOQ=="
+                ><button class="contact-button">
+                  <img src="./assets/ig.png" alt="icone-instagram" />Instagram
+                </button></a
               >
-                <img src="./assets/ig.png" alt="icone-instagram" />Instagram
-              </button>
             </li>
             <li class="contact-list">
-              <button class="contact-button" href="https://wa.me/5521979579537">
-                <img src="./assets/wp.png" alt="icone-whatsapp" />
-                Whatsapp
-              </button>
+              <a href="https://wa.me/5521979579537"
+                ><button class="contact-button">
+                  <img src="./assets/wp.png" alt="icone-whatsapp" />
+                  Whatsapp
+                </button></a
+              >
             </li>
           </ul>
         </div>
