--- a/index.html
+++ b/index.html
@@ -117,137 +117,136 @@
           <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img src="./assets/imóvel-barra.jpg" alt="preview-imóvel" />
+                <img src="./assets/elos1.jpg" alt="preview-imóvel" />
                 <button class="property-button">Barra da Tijuca</button>
               </div>
-              <div class="back"></div>
+              <div class="back">
+                <h1>Elos 🏘️</h1>
+                <h2>Área de 124m²</h2>
+                <p>4 Quartos e 2 suítes 3 banheiros e 2 vagas de garagem.</p>
+                <p>Condomínio com piscina e academia.</p>
+                <p>
+                  Churrasqueira, cinema, playground, bar, entre outros espaços.
+                </p>
+              </div>
             </div>
           </div>
           <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img src="./assets/imóvel-recreio.jpg" alt="preview-imóvel" />
-                <button class="property-button">
-                  Recreio dos Bandeirantes
-                </button>
+                <img src="./assets/elos2.jpg" alt="preview-imóvel" />
+                <button class="property-button">Barra da Tijuca</button>
               </div>
-              <div class="back"></div>
+              <div class="back">
+                <h1>Elos 🏘️</h1>
+                <h2>Área de 115,37m²</h2>
+                <p>4 Quartos e 1 suíte 3 banheiros e 2 vagas de garagem.</p>
+                <p>Condomínio com piscina e academia.</p>
+                <p>
+                  Churrasqueira, cinema, playground, bar, entre outros espaços.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="available-property secundary-property-mb">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img
-                  src="./assets/imóvel-jacarepagua.jpg"
-                  alt="preview-imóvel"
-                />
-                <button class="property-button">Jacarepaguá</button>
+                <img src="./assets/elos3.jpg" alt="preview-imóvel" />
+                <button class="property-button">Barra da Tijuca</button>
               </div>
-              <div class="back"></div>
+              <div class="back">
+                <h1>Elos 🏘️</h1>
+                <h2>Área de 118m²</h2>
+                <p>3 Quartos e 1 suíte 3 banheiros e 2 vagas de garagem.</p>
+                <p>Condomínio com piscina e academia.</p>
+                <p>
+                  Churrasqueira, cinema, playground, bar, entre outros espaços.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="available-property secundary-property-mb">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img src="./assets/imóvel-ipanema.jpg" alt="preview-imóvel" />
-                <button class="property-button">Ipanema</button>
+                <img src="./assets/millenio.jpg" alt="preview-imóvel" />
+                <button class="property-button">Barra da Tijuca</button>
               </div>
-              <div class="back"></div>
+              <div class="back">
+                <h1>Millenio 🏘️</h1>
+                <h2>Área de 77m²</h2>
+                <p>2 suítes, 2 banheiros e 1 vaga de garagem.</p>
+                <p>Condomínio com piscina e academia.</p>
+                <p>Office, bar, brinquedoteca, sauna, entre outros espaços.</p>
+              </div>
             </div>
           </div>
-          <div class="available-property secundary-property-mb">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img src="./assets/imóvel-tijuca.jpg" alt="preview-imóvel" />
-                <button class="property-button">Tijuca</button>
+                <img src="./assets/saint-mitchel.jpg" alt="preview-imóvel" />
+                <button class="property-button">Barra da Tijuca</button>
               </div>
-              <div class="back"></div>
+              <div class="back">
+                <h1>Saint Mitchel 🏘️</h1>
+                <h2>Área de 160m²</h2>
+                <p>4 suítes, 5 banheiros e 2 vagas de garagem.</p>
+                <p>Condomínio com piscina e academia.</p>
+                <p>
+                  Hidromassagem, spa, brinquedoteca, sauna, churrasqueira, entre
+                  outros espaços.
+                </p>
+              </div>
             </div>
           </div>
-          <div class="available-property secundary-property-mb">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img
-                  src="./assets/imóvel-campogrande.jpg"
-                  alt="preview-imóvel"
-                />
+                <img src="./assets/carioca-park.jpeg" alt="preview-imóvel" />
                 <button class="property-button">Campo Grande</button>
               </div>
-              <div class="back"></div>
-            </div>
-          </div>
-          <div class="available-property secundary-property-mb">
-            <div class="flipper">
-              <div class="front">
-                <img src="./assets/imóvel-leblon.jpg" alt="preview-imóvel" />
-                <button class="property-button">Leblon</button>
+              <div class="back">
+                <h1 style="margin-bottom: 10px">Carioca Park 🏘️</h1>
+                <h2>Entre em contato para mais informações.</h2>
               </div>
-              <div class="back"></div>
             </div>
           </div>
-          <div class="available-property secundary-property-mb">
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img src="./assets/imóvel-botafogo.jpg" alt="preview-imóvel" />
-                <button class="property-button">Botafogo</button>
-              </div>
-              <div class="back"></div>
-            </div>
-          </div>
-          <div
-            class="available-property secundary-property secundary-property-mb"
-          >
-            <div class="flipper">
-              <div class="front">
-                <img
-                  src="./assets/imóvel-campogrande.jpg"
-                  alt="preview-imóvel"
-                />
+                <img src="./assets/carioca-park.jpeg" alt="preview-imóvel" />
                 <button class="property-button">Campo Grande</button>
               </div>
-              <div class="back"></div>
+              <div class="back">
+                <h1>Casa Duplex 🏘️</h1>
+                <h2>Área de 68m²</h2>
+                <p>
+                  1° pavimento: Garagem, sala, cozinha americana, lavabo e área
+                  de serviço.
+                </p>
+                <p>2° pavimento: 2 suítes.</p>
+                <p>
+                  Condomínio Camila em Santíssimo. Próximo à Avenida Brasil. Rua
+                  Wilson Grey, 80.
+                </p>
+              </div>
             </div>
           </div>
-          <div
-            class="available-property secundary-property secundary-property-mb"
-          >
+          <div class="available-property main-property">
             <div class="flipper">
               <div class="front">
-                <img
-                  src="./assets/imóvel-campogrande.jpg"
-                  alt="preview-imóvel"
-                />
+                <img src="./assets/novo-lar.jpeg" alt="preview-imóvel" />
                 <button class="property-button">Campo Grande</button>
               </div>
-              <div class="back"></div>
-            </div>
-          </div>
-          <div
-            class="available-property secundary-property secundary-property-mb"
-          >
-            <div class="flipper">
-              <div class="front">
-                <img
-                  src="./assets/imóvel-campogrande.jpg"
-                  alt="preview-imóvel"
-                />
-                <button class="property-button">Campo Grande</button>
+              <div class="back">
+                <h1>Novo Lar 🏘️</h1>
+                <h2>Área de 44m² ou 48m²</h2>
+                <p>2 Quartos, vaga para carro.</p>
+                <p>450m da Estrada da Cachamorra.</p>
+                <p>
+                  Lazer completo e segurança, próximo à escolas, comércios e
+                  serviços.
+                </p>
               </div>
-              <div class="back"></div>
-            </div>
-          </div>
-          <div
-            class="available-property secundary-property secundary-property-mb"
-          >
-            <div class="flipper">
-              <div class="front">
-                <img
-                  src="./assets/imóvel-campogrande.jpg"
-                  alt="preview-imóvel"
-                />
-                <button class="property-button">Campo Grande</button>
-              </div>
-              <div class="back"></div>
             </div>
           </div>
         </div>
