properties and about text update

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
             </div>
           </div>
-          <div class="available-property main-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/elos3.jpg" alt="preview-imóvel" />
@@ -165,7 +165,7 @@
               </div>
             </div>
           </div>
-          <div class="available-property main-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/millenio.jpg" alt="preview-imóvel" />
@@ -180,7 +180,7 @@
               </div>
             </div>
           </div>
-          <div class="available-property main-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/saint-mitchel.jpg" alt="preview-imóvel" />
@@ -198,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="available-property main-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/carioca-park.jpeg" alt="preview-imóvel" />
@@ -210,10 +210,10 @@
               </div>
             </div>
           </div>
-          <div class="available-property main-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
-                <img src="./assets/carioca-park.jpeg" alt="preview-imóvel" />
+                <img src="./assets/casa-duplex.jpg" alt="preview-imóvel" />
                 <button class="property-button">Campo Grande</button>
               </div>
               <div class="back">
@@ -231,7 +231,7 @@
               </div>
             </div>
           </div>
-          <div class="available-property main-property">
+          <div class="available-property secundary-property-mb">
             <div class="flipper">
               <div class="front">
                 <img src="./assets/novo-lar.jpeg" alt="preview-imóvel" />
@@ -246,6 +246,23 @@
                   Lazer completo e segurança, próximo à escolas, comércios e
                   serviços.
                 </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="available-property secundary-property secundary-property-mb"
+          >
+            <div class="flipper">
+              <div class="front">
+                <img src="./assets/viva-iguaçu.jpg" alt="preview-imóvel" />
+                <button class="property-button">Campo Grande</button>
+              </div>
+              <div class="back">
+                <h1>Viva Iguaçu 🏘️</h1>
+                <h2>Área de até 77,92m²</h2>
+                <p>2 Quartos, vaga para carro.</p>
+                <p>Piscina e salão de festas.</p>
+                <p>Academia ao ar livre, playground e quadra.</p>
               </div>
             </div>
           </div>
@@ -268,21 +285,20 @@
           </div>
           <div class="about-text-wrapper">
             <p class="about-text">
-              Oi! Eu me chamo Vitor Trovão. Sou formado em transações
-              imobiliárias e estou concluindo o ensino superior em Gestão
-              Imobiliária. Moro no estado do Rio de Janeiro e realizo
-              atendimentos em todas as localidades em que os meus clientes
-              tiverem interesse. Estou no ramo imobiliário há 4 anos, onde me
-              apaixonei por mudar a vida das pessoas, ajudando-as a adquirir não
-              só o seu lar, mas também o seu sonho! Desde criança, via meus pais
-              lutarem para conseguir pagar o aluguel da casa em que morávamos.
-              Hoje, eles passaram dessa fase e conquistaram seu próprio lar.
-              Quando temos nossa casa, é algo totalmente confortável e a
-              qualidade de vida é outra. Hoje, tenho o privilégio de transformar
-              a vida das pessoas assim como a dos meus pais um dia foram
-              transformadas. A espera acabou e você pode realizar o sonho da
-              casa própria. Entre em contato comigo e conheça as vantagens,
-              solicitando uma simulação.
+              Oi! Eu me chamo Vitor Trovão. Sou formado em Transações
+              Imobiliárias e Gestão Imobiliária. Moro no estado do Rio de
+              Janeiro e realizo atendimentos em todas as localidades em que os
+              meus clientes tiverem interesse. Estou no ramo imobiliário há 4
+              anos, onde me apaixonei por mudar a vida das pessoas, ajudando-as
+              a adquirir não só o seu lar, mas também o seu sonho! Desde
+              criança, via meus pais lutarem para conseguir pagar o aluguel da
+              casa em que morávamos. Hoje, eles passaram dessa fase e
+              conquistaram seu próprio lar. Quando temos nossa casa, é algo
+              totalmente confortável e a qualidade de vida é outra. Hoje, tenho
+              o privilégio de transformar a vida das pessoas assim como a dos
+              meus pais um dia foram transformadas. A espera acabou e você pode
+              realizar o sonho da casa própria. Entre em contato comigo e
+              conheça as vantagens, solicitando uma simulação.
             </p>
           </div>
         </div>
