about-text update

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <div class="about-text-wrapper">
             <p class="about-text">
               Oi! Eu me chamo Vitor Trovão. Sou formado em Transações
-              Imobiliárias e Gestão Imobiliária. Moro no estado do Rio de
+              Imobiliárias e Negócios Imobiliários. Moro no estado do Rio de
               Janeiro e realizo atendimentos em todas as localidades em que os
               meus clientes tiverem interesse. Estou no ramo imobiliário há 4
               anos, onde me apaixonei por mudar a vida das pessoas, ajudando-as
